--- a/transform-activity/index.html
+++ b/transform-activity/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h1>Tilted Designs</h1>
       <div class="wrapper">
-        <main>
+        <main ><transform></transform>
           <div class="info">
             <h2>Hire Us</h2>
             <h3>For the finest in web designs</h3>
